# OpenMystera

./: CMakeLists.txt  MysteraLegends.dsp  MysteraLegends.dsw  MysteraLegends.ncb  MysteraLegends.opt  MysteraLegends.plg  Mysteralegends.rc  Mysteralegends.res  README.md  item.ml  mlscript.h  npc.ml  resource.h
INCLUDE/: gui.h  (+15 more)
client/: CMakeLists.txt
client/INCLUDE/: DrawText.h  Input.h  NetworkStructures.h  Timing.h  cglobals.h  console.h  crecv.h  dialog.h  draw.h  gamedefs.h  glfuncs.h  gui.h  input.h  list.h  metaserv.h  mlheader.h  net.h  sdlgameinput.h  wave.h
client/SRC/: client.cpp  net.cpp
client/SRC/Graphics/: SDL_OGL.cpp
client/SRC/Input/: SDL.cpp
client/data/misc/: sndfx.txt
client/data/music/: 106.mid  107.mid  descriptions.txt
server/: CMakeLists.txt
server/INCLUDE/: censor.h  console.h  consoleport.h  gamedefs.h  gameserver.h  list.h  md5.h  mysql_db.h  net.h  netstructs.h  portdir.h  script_commands.h  script_system.h  sqlite3.h  utils.h
server/SRC/: DS_Table.cpp  EmailSender.cpp  FileList.cpp  FormatString.cpp  FullyConnectedMesh.cpp  FunctionThread.cpp  GridSectorizer.cpp  Makefile  NatPunchthrough.cpp  NetworkIDManager.cpp  PluginInterface.cpp  ReadyEvent.cpp  ReliabilityLayer.cpp  ReplicaManager2.cpp  Router.cpp  SocketLayer.cpp  StringCompressor.cpp  StringTable.cpp  SystemAddressList.cpp  TCPInterface.cpp  TableSerializer.cpp  TelnetTransport.cpp  consoleport.cpp  gameserver.cpp  gs_commands.cpp  gs_messages.cpp  gs_mhandler.cpp  gs_players.cpp  md5.cpp  mlserver.cpp  mysql_db.cpp  net.cpp  script_commands.cpp  script_system.cpp  utils.cpp
server/serverdata/: BuildScript.sh  item.ml  mlegends.sql  npc.ml  serv.cfg
(+924 files in other folders)
